--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -22,10 +22,10 @@
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="{% url 'index' %}">Home</a>
+            <a href="{% url 'index' %}">Iníco</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="{% url 'listings' %}">Listings</a>
+            <a href="{% url 'listings' %}">Destaques</a>
           </li>
           <li class="breadcrumb-item active">{{listing.title}}</li>
         </ol>
@@ -35,7 +35,7 @@
   <!-- Listing -->
   <section id="listing" class="py-4">
     <div class="container">
-      <a href="{%url 'listings' %}" class="btn btn-light mb-4">Back To Listings</a>
+      <a href="{%url 'listings' %}" class="btn btn-light mb-4">Voltar para destaques</a>
       <div class="row">
         <div class="col-md-9">
           <!-- Home Main Image -->
@@ -90,19 +90,19 @@
             <div class="col-md-6">
               <ul class="list-group list-group-flush">
                 <li class="list-group-item text-secondary">
-                  <i class="fas fa-money-bill-alt"></i> Asking Price:
+                  <i class="fas fa-money-bill-alt"></i> Valor:
                   <span class="float-right"> {{ listing.price | intcomma }}</span>
                 </li>
                 <li class="list-group-item text-secondary">
-                  <i class="fas fa-list-alt"></i> Category:
+                  <i class="fas fa-list-alt"></i> Categoria:
                   <span class="float-right">{{ listing.category}}</span>
                 </li>
                 <li class="list-group-item text-secondary">
-                  <i class="fas fa-list-alt"></i> Rating:
+                  <i class="fas fa-list-alt"></i> Avaliação:
                   {%if current_rating%}
                     <span class="float-right">{{ current_rating }}</span>
                   {%else%}
-                    <p>No rating made for this listing yet</p>
+                    <p>Este anúncio ainda não recebeu avaliação</p>
                   {%endif%}
                 </li>
               </ul>
@@ -114,12 +114,12 @@
                   <span class="float-right">{{listing.list_date | timesince}}</span>
                 </li>
                 <li class="list-group-item text-secondary">
-                  <i class="fas fa-user"></i> Owner:
+                  <i class="fas fa-user"></i> Proprietário:
                   <span class="float-right">{{ listing.owner.first_name }}
                   </span>
                 </li>
                 <li class="list-group-item text-secondary">
-                    <i class="fas fa-phone"></i> Phone No:
+                    <i class="fas fa-phone"></i> Telefone:
                     <span class="float-right">{{ listing.owner.phone }}
                     </span>
                   </li>
@@ -137,17 +137,17 @@
           </div>
         </div>
         <div class="col-md-3">
-          <button class="btn-primary btn-block btn-lg" data-toggle="modal" data-target="#inquiryModal">Make An Inquiry</button>
+          <button class="btn-primary btn-block btn-lg" data-toggle="modal" data-target="#inquiryModal">Entrar em contato</button>
           <br>
           {%if request.user.is_authenticated%}
             <form action="{%url 'listing' listing.id%}" method="POST">
               {%csrf_token%}
               {%if favourite%}
                 <input type="hidden" name="favourite_val" value="unfavourite">
-                <button class="btn-danger btn-block btn-lg" type="submit">UnFavourite</button>
+                <button class="btn-danger btn-block btn-lg" type="submit">Desfavoritar</button>
               {%else%}
                 <input type="hidden" name="favourite_val" value="favourite">
-                <button class="btn-success btn-block btn-lg" type="submit">Favourite</button>
+                <button class="btn-success btn-block btn-lg" type="submit">Favoritar</button>
               {%endif%}
             </form>
           {%endif%}
@@ -157,13 +157,13 @@
               {%csrf_token%}
               <div style="display: flex;">
                 <input  name="my_rating" required placeholder="Enter value from 1-10" class="form-control">
-                <button class="btn btn-primary" type="submit">Rate</button>
+                <button class="btn btn-primary" type="submit">Avaliar</button>
               </div>
                 {%else%}
               {%if request.user.is_authenticated%}
-                <p>You have already rated this listing</p>
+                <p>Você já avaliou esse anúncio</p>
               {%else%}
-                <p>Please login to rate this listing</p>
+                <p>Por favor, faça o login para avaliar esse anúncio</p>
               {%endif%}
             </form>
           {%endif%}
@@ -177,7 +177,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="inquiryModalLabel">Make An Inquiry</h5>
+          <h5 class="modal-title" id="inquiryModalLabel">Entrar em contato</h5>
           <button type="button" class="close" data-dismiss="modal">
             <span>&times;</span>
           </button>
@@ -195,11 +195,11 @@
             <input type="hidden" name="listing_id" value="{{listing.id}}">
             <input type="hidden" name="owner_id" value="{{listing.owner.id}}">
             <div class="form-group">
-              <label for="property_name" class="col-form-label">Item:</label>
+              <label for="property_name" class="col-form-label">Vaga:</label>
               <input type="text" name="listing" class="form-control" value="{{listing.title}}" readonly>
             </div>
             <div class="form-group">
-              <label for="name" class="col-form-label">Name:</label>
+              <label for="name" class="col-form-label">Nome:</label>
               <input type="text" name="name" class="form-control" {%if user.is_authenticated%} value = "{{ user.first_name }} {{ user.last_name }}" readonly{%else%} required {%endif%}>
             </div>
             <div class="form-group">
@@ -207,11 +207,11 @@
               <input type="email" name="email" class="form-control" {%if user.is_authenticated%} value = "{{ user.email }}" readonly{%else%} required {%endif%}>
             </div>
             <div class="form-group">
-              <label for="phone" class="col-form-label">Phone:</label>
+              <label for="phone" class="col-form-label">Telefone:</label>
               <input type="text" name="phone" class="form-control">
             </div>
             <div class="form-group">
-              <label for="message" class="col-form-label">Message:</label>
+              <label for="message" class="col-form-label">Mensagem:</label>
               <textarea name="message" class="form-control"></textarea>
             </div>
             <hr>
