--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -56,11 +56,8 @@
                 <td>
                   <a class="btn btn-light" href="{% url 'listing' listing.id%}">Ver Anúncio</a>
                   <a class="btn btn-outline-warning" href="{% url 'update' listing.id%}">Editar</a>
-                  <a class="btn btn-outline-danger" onclick="$('#delete').click()">Deletar</a>
-                  <form style="display: none;" method="POST" action="{% url 'delete' listing.id%}">
-                    {% csrf_token%}
-                    <button type="submit" class="btn btn-outline-danger" id="delete">Deletar</button>
-                  </form>
+                  <a class="btn btn-outline-danger" href="{% url 'delete' listing.id%}">Deletar</a>
+                  
 
                 </td>
               </tr>
